# forth-hs

./: .gitignore  CHANGELOG.md  README.md  flake.nix  forth-hs.cabal  hforth.cabal
lib/: stdlib.fs
src/: Forth.hs  HForth.hs
