cabal-version:   3.12
name:            forth-hs
version:         0.1.0.0
license:         GPL-3.0-or-later
author:          James Hobson
maintainer:      james@hobson.space
build-type:      Simple
extra-doc-files: CHANGELOG.md
data-dir: lib
data-files: *.fs

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Forth
    other-modules:    Paths_forth_hs
    build-depends:    base, containers, attoparsec, text, mtl, vector
    hs-source-dirs:   src
    default-language: Haskell2010
