cabal-version:   3.12
name:            hforth
version:         0.1.0.0
license:         GPL-3.0-or-later
author:          James Hobson
maintainer:      james@hobson.space
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  HForth
    build-depends:    base, containers, attoparsec, text, mtl, vector
    hs-source-dirs:   src
    default-language: Haskell2010
